<resources>
    <string name="app_name">Revolution HelpTech</string>

    <!-- For helper's profile info -->
    <string name="helper_name">Helper\'s \nName</string>
    <string name="helper_website">helper-website.com</string>
    <string name="helper_slogan">\"Helper Custom Slogan\"</string>
    <string name="helper_days_available">M T W Th F S Su</string>
    <string name="helper_hours_available">12pm - 2pm</string>
    <string name="helper_topics">• Android Basics\n• Android Applications\n• Windows Basics \n• iOS Basics\n.\n.\n.\nend test</string>

    <string-array name="device_array">
        <item>iPhone</item>
        <item>Android</item>
        <item>Macbook</item>
    </string-array>

    <string name="past_questions_title_1">Type of Question Here</string>
    <string name="past_questions_q_1">Question will be located here\n.\n.\n.\n.\n.\n.\n.\n.\n.\nend test</string>
    <string name="past_questions_a_1">Answer will be located here or \nAnswer in progress\n.\n.\nend test</string>
    <string name="past_questions_helper_1">Helped by (insert helper name here)</string>

    <string name="ask_question_title">Type of Question</string>
    <string name="ask_question_question">Question will be located here\n.\n.\n.\n.\n.\nend test</string>
    <string name="ask_question_discussion">Discussion will be located here\n.\n.\n.\n.\n.\n.\n.\n.\n.\n.\n.\nend test</string>
    <string name="ask_question_input">Type your input here</string>

</resources>
