<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/profile_layout_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:weightSum="2"
        >

        <Button
            android:id="@+id/profile_tab_about"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="About"
            android:textSize="16sp"
            android:background="@drawable/main_screen_border"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/profile_tab_answers"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Answers"
            android:textSize="16sp"
            android:background="@color/white"
            android:layout_weight="1"
            />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/profile_layout_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/profile_layout_tabs"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorAccent"

            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <!-- above box (image view) is for helper's picture -->

    </RelativeLayout>

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helper_name"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textAlignment="center"


        android:layout_centerVertical="true"
        android:layout_alignBottom="@id/profile_layout_about"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/profile_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helper_slogan"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"

        android:layout_below="@+id/profile_name"
        android:layout_alignTop="@id/profile_layout_about"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        />

    <ImageView
        android:id="@+id/profile_top_line"
        android:layout_width="200dp"
        android:layout_height="5dp"
        android:background="@drawable/basic_line_seperator"

        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/profile_slogan"
        />

    <TextView
        android:id="@+id/profile_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helper_website"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"

        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/profile_top_line"
        />

    <LinearLayout
        android:id="@+id/bottom_directory"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="6"
        android:layout_alignParentBottom="true" >
        <Button
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:text="Home"
            android:textSize="18sp"
            android:layout_weight="1" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:textSize="18sp"
            android:layout_weight="4"
            android:src="@drawable/ic_search" />

        <Button
            android:id="@+id/logOutButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:text="Log out"
            android:textSize="18sp"
            android:layout_weight="1" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@id/profile_layout_about"
        android:layout_above="@id/bottom_directory"

        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profile_mid_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/basic_line_seperator"

                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_alignParentTop="true"
                />

            <TextView
                android:id="@+id/profile_days_available"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/helper_days_available"
                android:textSize="20sp"
                android:textColor="@color/black"

                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/profile_mid_line"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DAYS"
                android:textSize="20sp"
                android:textColor="@color/black"

                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/profile_mid_line"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                />

            <TextView
                android:id="@+id/profile_hours_available"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/helper_hours_available"
                android:textSize="20sp"
                android:textColor="@color/black"

                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_below="@id/profile_days_available"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="HOURS"
                android:textSize="20sp"
                android:textColor="@color/black"

                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_below="@id/profile_days_available"
                />

            <ImageView
                android:id="@+id/profile_bottom_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/basic_line_seperator"

                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_below="@id/profile_hours_available"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/helper_topics"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"

                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_below="@id/profile_bottom_line"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TOPICS"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"

                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_below="@id/profile_bottom_line"
                />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>